--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,13 @@
     left:5%;
     top:5%;
     position:absolute;
-    display: block;
+    display:block;
 }
 
 img{
     max-width:100%;
     max-height:100%;
-    border-radius: 10px;
+    border-radius:10px;
 }
 
 img:hover{
@@ -25,66 +25,94 @@ img:hover{
     height:100%;
 }
 
+
 #left{
-
-    max-width:40%;
+    max-width:100%;
     position:relative;
-    float:left;
-
 }
 
 #right{
-    height:90%;
-    width:60%;
+    width:100%;
+    left:5px;
     position:relative;
-    float:right;
-}
-
-*{
-    font-family:monaco;
-}
-
-body{
-    background-color: #d6d2cf;
 }
 
 .rightpane{
-    left:50px;
     position:relative;
 }
 
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 20px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-  left:50px;
-  position:relative;
+.fa{
+    padding:20px;
+    font-size:30px;
+    width:20px;
+    text-align:center;
+    text-decoration:none;
+    border-radius:50%;
+    position:relative;
 }
 
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
+@mediaonlyscreenand(min-width:900px){
+    #left{
+        max-width:40%;
+        position:relative;
+        float:left;
+    }
+
+    #right{
+        height:90%;
+        width:60%;
+        position:relative;
+        float:right;
+    }
+
+    .rightpane{
+        left:50px;
+        position:relative;
+    }
+
+    .fa{
+        padding:20px;
+        font-size:30px;
+        width:20px;
+        text-align:center;
+        text-decoration:none;
+        border-radius:50%;
+        left:50px;
+        position:relative;
+    }
 }
 
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
+
+*{
+    font-family:monaco;
+
 }
 
-.fa-instagram {
-  background: #d62976;
-  color: white;
+body{
+    background-color:black;
+    color:white;
 }
 
-.fa-github {
-  background:  #171515;
-  color: white;
+.fa-twitter{
+    background:#55ACEE;
+    color:white;
 }
 
-.fa:hover {
-    opacity: 0.7;
+.fa-linkedin{
+    background:#007bb5;
+    color:white;
 }
 
+.fa-instagram{
+    background:#d62976;
+    color:white;
+}
+
+.fa-github{
+    background:#171515;
+    color:white;
+}
+
+.fa:hover{
+    opacity:0.7;
+}
